[gd_scene load_steps=16 format=3 uid="uid://7mb4uxjg3stg"]

[ext_resource type="Texture2D" uid="uid://dwk6ssrnup5cj" path="res://assets/card.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dd8aqlbu3u1op" path="res://assets/buttons.png" id="2"]
[ext_resource type="VideoStream" path="res://assets/video/bg.ogv" id="2_5hkgf"]
[ext_resource type="FontFile" uid="uid://dpay43l71bh2h" path="res://fonts/LilitaOne-Regular.ttf" id="3"]
[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://c22rrccjg260m" path="res://assets/player/idle/Idle0001.png" id="6"]
[ext_resource type="Texture2D" uid="uid://02xjf358437v" path="res://assets/player/idle/Idle0000.png" id="7"]
[ext_resource type="FontFile" uid="uid://cltp4tyavayb1" path="res://fonts/Acme-Regular.ttf" id="8_573mg"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("2")
region_rect = Rect2(0, 0, 266, 66)

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="SpriteFrames" id="7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[node name="mainmenu" type="Node2D"]
script = ExtResource("4")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1282.0
offset_bottom = 718.0
stream = ExtResource("2_5hkgf")
autoplay = true
expand = true
loop = true

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 117.877
offset_top = 592.0
offset_right = 228.877
offset_bottom = 639.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.0627451, 0.0941176, 0.12549, 1)
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 30
text = "RC X 05"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = 2.0
offset_right = 1334.0
offset_bottom = 723.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(188.878, 343.501)
scale = Vector2(0.729977, 0.740614)
texture = ExtResource("1")

[node name="Control2" type="Control" parent="Control/Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -214.0
offset_top = -275.0
offset_right = 215.0
offset_bottom = 255.0

[node name="Button" type="Button" parent="Control/Sprite2D/Control2"]
layout_mode = 0
offset_left = 70.1854
offset_top = 109.0
offset_right = 348.185
offset_bottom = 181.0
theme_override_styles/pressed = SubResource("2")
theme_override_styles/focus = SubResource("3")
icon = ExtResource("2")
flat = true
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Sprite2D/Control2/Button"]
layout_mode = 0
offset_left = 93.3207
offset_top = 18.4142
offset_right = 189.321
offset_bottom = 55.4142
mouse_filter = 2
theme_override_colors/default_color = Color(0.0627451, 0.0941176, 0.12549, 1)
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 30
text = "START"

[node name="Button2" type="Button" parent="Control/Sprite2D/Control2"]
layout_mode = 0
offset_left = 71.0128
offset_top = 210.385
offset_right = 349.013
offset_bottom = 282.385
theme_override_styles/pressed = SubResource("2")
theme_override_styles/focus = SubResource("4")
icon = ExtResource("2")
flat = true
expand_icon = true

[node name="High Score" type="RichTextLabel" parent="Control/Sprite2D/Control2/Button2"]
layout_mode = 0
offset_left = 47.2609
offset_top = 18.0306
offset_right = 228.261
offset_bottom = 55.0306
mouse_filter = 2
theme_override_colors/default_color = Color(0.0627451, 0.0941176, 0.12549, 1)
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 30
text = "HIGH SCORES"

[node name="Button3" type="Button" parent="Control/Sprite2D/Control2"]
clip_contents = true
layout_mode = 0
offset_left = 72.9905
offset_top = 311.167
offset_right = 350.991
offset_bottom = 383.167
theme_override_styles/pressed = SubResource("2")
theme_override_styles/focus = SubResource("5")
disabled = true
icon = ExtResource("2")
flat = true
expand_icon = true

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/Sprite2D/Control2/Button3"]
layout_mode = 0
offset_left = 77.1342
offset_top = 19.6873
offset_right = 207.134
offset_bottom = 56.6873
mouse_filter = 2
theme_override_colors/default_color = Color(0.0627451, 0.0941176, 0.12549, 1)
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 30
text = "OPTIONS"

[node name="Quit" type="Button" parent="Control/Sprite2D/Control2"]
layout_mode = 0
offset_left = 72.064
offset_top = 411.073
offset_right = 350.064
offset_bottom = 483.073
theme_override_styles/pressed = SubResource("2")
theme_override_styles/focus = SubResource("6")
icon = ExtResource("2")
flat = true
expand_icon = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/Sprite2D/Control2/Quit"]
layout_mode = 0
offset_left = 97.7424
offset_top = 18.4839
offset_right = 193.742
offset_bottom = 55.4839
mouse_filter = 2
theme_override_colors/default_color = Color(0.0627451, 0.0941176, 0.12549, 1)
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 30
text = "QUIT"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1138.97, 383.016)
sprite_frames = SubResource("7")
animation = &"idle"
frame_progress = 0.133424

[node name="Name_bg" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -16.0
offset_right = 1314.0
offset_bottom = 744.0
color = Color(0.0627451, 0.0941176, 0.12549, 1)

[node name="Name" type="LineEdit" parent="Name_bg"]
layout_mode = 0
offset_left = 416.0
offset_top = 340.0
offset_right = 911.0
offset_bottom = 403.0
theme_override_fonts/font = ExtResource("8_573mg")
placeholder_text = "Enter Your Name"
max_length = 15
caret_blink = true
